# sopel-pypi

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_pypi/: __init__.py  plugin.py
